# SimpleTunning

./: .gitignore  .gitmodules  README.md  docker-compose.yml  main.py  requirements.txt
app/api/: pipeline.py
app/core/: config.py
app/schemas/: pipeline.py
app/ws/: pipeline_ws.py
core/: CMakeLists.txt
core/bindings/: pybind_module.cpp
core/include/isp/: cache.h  hash_utils.h  memory_pool.h  node.h  pipeline.h
core/include/nodes/: denoise.h  raw_reader.h  tone_mapping.h
core/src/: cache.cpp  memory_pool.cpp  node.cpp  pipeline.cpp
core/src/nodes/: raw_reader.cpp
schemas/: pipeline.schema.json
scripts/: build_all.sh  start_local.bat
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/ImageViewer/: ImageViewer.tsx
web/src/components/Inspector/: Inspector.tsx
web/src/components/NodeLibrary/: NodeLibrary.tsx
web/src/components/PipelineEditor/: ISPNode.tsx  PipelineEditor.tsx
web/src/components/StatsPanel/: StatsPanel.tsx
web/src/services/: api.ts  websocket.ts
web/src/stores/: pipelineStore.ts
web/src/types/: pipeline.ts
